# coral-bb

./: Cargo.toml  README.md
.github/: copilot-instructions.md
crates/coral-bb-app/: Cargo.toml
crates/coral-bb-core/: Cargo.toml
crates/coral-bb-core/src/: lib.rs
crates/coral-bb-core/src/models/: message.rs  mod.rs  sub_forum.rs  thread.rs  user.rs
