[workspace]
resolver = "3"
members = ["crates/coral-bb-app","crates/coral-bb-core"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
authors = ["KBastin"]
description = "Coral BB is a modern, fast, and secure bulletin board system written in Rust. It provides a simple and efficient way to create and manage online communities, with features such as user authentication, post creation, and moderation tools."
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
